[package]
name = "hertta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable sync runtime
sync-rt = ["jl-sys/fast-tls"]
# Enable async runtime
async-rt = ["async", "deadqueue", "futures-concurrency", "jl-sys/fast-tls"]
# Enable async-std as backing runtime
async-std-rt = ["async-rt", "async-std"]
# Enable tokio as backing runtime
tokio-rt = ["async-rt", "tokio"]

# Enable task and channel traits used by the async runtime
async = ["futures", "crossbeam-channel", "async-trait"]
# Enable `ccall` feature, link `libuv`, and enable `CCall::us_async_send`
uv = ["jl-sys/uv", "ccall"]

[dependencies]
calamine = "0.19.1"
fs = "0.0.5"
pathbuf = "0.3.1"
umya-spreadsheet = "0.8.7"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
csv = "1.2.1"
indexmap = "1.9.3"
ordered-float = "3.7.0"
warp = "0.3"
reqwest = { version = "0.11.9", features = ["blocking", "json"] } #reqwest = "0.11"
serde_yaml = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
time = "0.3.30"
async-trait = { version = "0.1", optional = true }
mockito = "0.28.0"
chrono = "0.4.31"
chrono-tz = "0.8.6"
futures = "0.3.30"
bincode = "1.3.3"
arrow = { version = "51.0", features = ["ipc"] }
base64 = "0.22.0"
serde_arrow = "0.10.0"
rand = "0.8.5"
thiserror = "1.0.60"
prettytable = "0.10.0"
interprocess = "2.1.0"
bytes = "1.6.0"
clap = { version = "3", features = ["derive"] }
engine = "0.0.0"
arrow-ipc = "51.0"
zmq = "0.10.0"
polars = "0.40.0"
regex = "1.10.4"
async-std = "1.12.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt", "time", "sync"]}
