[package]
name = "hertta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hertta_derive = { path = "hertta_derive" }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
warp = "0.3"
reqwest = { version = "0.11.9", features = ["blocking", "json"] }
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["now", "serde"] }
arrow = { version = "53.1", features = ["chrono-tz", "ipc"] }
thiserror = "1.0.60"
clap = { version = "4.5", features = ["derive"] }
arrow-ipc = "53.1"
zmq = "0.10"
directories = "5.0"
config = "0.14"
toml = "0.8"
juniper = { version = "0.16", features = ["chrono", "schema-language"] }
juniper_warp = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt", "time", "sync"]}
tempfile = "3.12"
